xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__unary_plus.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"+1\")"
---
Ok(
    Spanned {
        value: Unary(
            Unary {
                op: Plus,
                atom: Spanned {
                    value: Const(
                        Integer(
                            1,
                        ),
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            1,
                        ),
                        length: SourceOffset(
                            1,
                        ),
                    },
                },
            },
        ),
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                2,
            ),
        },
    },
)
