xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__unknown_named_function_ref.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"unknown_function#2\")"
---
Err(
    XPST0017,
)
