xee-xpath/src/ir/snapshots/xee_xpath__ir__ast_ir__tests__unknown_static_function_name.snap
---
source: xee-xpath/src/ir/ast_ir.rs
expression: "convert_expr_single(\"unknown_function()\")"
---
Err(
    SpannedError {
        error: XPST0017,
        span: SourceSpan(
            0,
            18,
        ),
    },
)
